# customizable_chatbot

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
chatbot/: settings.py  urls.py
chatbot-frontend/: package-lock.json  package.json  vite.config.ts
chatbot-frontend/src/: App.css  App.tsx
chatbot-frontend/src/components/: ChatBot.tsx  MessageBubble.tsx
chatbot-frontend/src/hooks/: useChat.ts
chatbot-frontend/src/services/: api.ts
chatbot-frontend/src/types/: chat.ts
chatbot_app/: admin.py  google_ai.py  models.py  serializers.py  urls.py  views.py
chatbot_app/migrations/: 0001_initial.py
